--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     border-radius: 5px;
 }
 
-.screen {
+.screen-grid {
     width: 300px;
     height: 175px;
     border: 2px solid black;
@@ -49,5 +49,5 @@ button {
 }
 
 button:hover{
-    opacity: 60%    ;
+    opacity: 60%;
 }
