--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     font-size: large;
 }
 
-.calculator { 
+.calculator {
     display: flex;
     flex-direction: column;
     margin: 10px;
@@ -14,11 +14,28 @@
 }
 
 .screen-grid {
-    width: 300px;
+    width: 275px;
     height: 175px;
     border: 2px solid black;
     border-radius: 5px;
     margin: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.screen-grid * {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+
+}
+
+.screen-grid * * {
+    padding-right: 20px;
 }
 
 .controls {
@@ -27,22 +44,32 @@
     margin: 10px;
 }
 
-.math-buttons { 
+.top-row {
     display: flex;
-}  
+}
 
-.numpad { 
+.top-row * {
+    flex-grow: 1;
+}
+
+.math-buttons {
+    display: flex;
+}
+
+.numpad {
+    flex-grow: 3;
     display: grid;
     grid-template-columns: auto auto auto;
 }
 
 .operators {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
 
 button {
-    padding: 10px;
+    padding: 15px 10px;
     border: 2px solid black;
     margin: 5px;
     border-radius: 5px;
@@ -52,6 +79,6 @@ button {
     opacity: 0;
 }
 
-button:hover{
+.realButton:hover {
     opacity: 60%;
 }
