--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 body {
     background-color: beige;
 }
+
 .all-content {
     display: flex;
     justify-content: center;
@@ -27,8 +31,16 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: "DotGothic16", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
+.screen,
+.old-expression {
+    font-size: x-large;
+    font-weight: bolder;
+}
 
 .screen-grid * {
     flex-grow: 1;
@@ -46,6 +58,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 10px;
+
+
 }
 
 .top-row {
@@ -84,11 +98,19 @@ body {
     background-color: black;
     color: white;
 }
+
 button {
     padding: 15px 10px;
     /* border: 2px solid black; */
     margin: 5px;
     border-radius: 5px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "slnt" 0;
+    font-size: large;
 }
 
 .spacer {
