--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+@font-face {
+    font-family: "calculator-font";
+    src: url('./digital-7.ttf')format('truetype');
+}
+
+
 body {
     background-color: beige;
 }
@@ -31,7 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: "DotGothic16", sans-serif;
+    font-family: "calculator-font", "DotGothic16", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
